...
              ),
            ],
          ),
          const Spacer(flex: 2),
          // 로그인 버튼
          ConfirmButton(
            key: const Key('onboarding_login_button'),
            text: '로그인',
            onPressed: () => context.push(AuthRoutePath.login),
          ),
          AppGap.v16,
          // 구분선
          Row(
...
