...
                          ),
                        ],
                      );
                    }

                    return ListView.separated(
                      key: const Key('outing_state_list'),
                      physics: const AlwaysScrollableScrollPhysics(),
                      itemCount: filteredList.length,
                      itemBuilder: (context, index) {
                        final member = filteredList[index];
                        return SearchProfileList(
                          memberId: member.memberId,
...
